 5) DO NOT use Opera Mini it renders JavaScript output server side, therefore
    they might record the private key you generated.
 6) Art Wallet does not work properly in IE8 due to CSS limitations.
 7) BIP38 most likely will not work on mobile devices due to hardware limitations.

Here is a signed list of file names and version history.

2015-10-25: status ACTIVE
bitaddress.org-v3.0.0-SHA256-4781574ca09c07f65d1966619f37a762aac6decd8732cacc85b2f2f972f82751.html
 - add session log icon that shows all the key pairs generated during the current session.

2015-08-16: status ACTIVE
bitaddress.org-v2.9.11-SHA256-40376eddc790a63d9afcfb72c0a45002827da965f3bfe6ba8c330e697bf188b2.html
 - add status icons for checking the URI protocol used, support for window.crypto.getRandomValues
   and run the synchronous unit tests after entropy collection.

2015-07-18: status ACTIVE
bitaddress.org-v2.9.10-SHA256-445e44cfd04c8f1ea8f732c3ae7277b0166fdb3e2109251c54e4b367983fe04d.html
 - add Portuguese. Thanks rhcastilhos.
 - minor french updates.

2015-07-05: status ACTIVE
bitaddress.org-v2.9.9-SHA256-90ddaf250f6302acb53945128e38225208af5a2fa7cfdf51519213e8b144a76d.html
 - improve tab usability. You can now get to the Brain Wallet and Wallet Details tabs before 
   completing the entropy collection.

2015-01-08: status ACTIVE
bitaddress.org-v2.9.8-SHA256-2c5d16dbcde600147162172090d940fd9646981b7d751d9bddfc5ef383f89308.html
 - fix French translations. Escape quotes.

2015-01-07: status OFFLINE
bitaddress.org-v2.9.7-SHA256-1b0f71dfc2e064426328c15c4dbd1f467cb26afe0e84841347ad11d8ca668f70.html
 - fix translations

2015-01-05: status ACTIVE
bitaddress.org-v2.9.6-SHA256-34728a9cec417cf8060423c77e8793e4aa133cf3d66a6b8073b4290cf1f4695c.html
 - Japanese translations for Split Wallet. Thanks dabura667.
 - remove promise to show MINI key on details tab. MINI key
   will only be shown when it is provided since it cannot 
   be derived from other key formats.
 - fix README