@@ -32,6 +32,10 @@ END USER NOTES:
 Here is a signed list of file names and version history.
 
 2015-10-25: status ACTIVE
+bitaddress.org-v3.0.1-SHA256-24d2d7f047a9aa217bf69f3ef344c972c151b1e3f6a8aa86ceb9a3be62884bc0.html
+ - fix for session log not keeping track of keys from "Wallet Details" tab before entropy is collected.
+
+2015-10-25: status ACTIVE
 bitaddress.org-v3.0.0-SHA256-4781574ca09c07f65d1966619f37a762aac6decd8732cacc85b2f2f972f82751.html
  - add session log icon that shows all the key pairs generated during the current session.
 
@@ -302,11 +306,11 @@ bitaddress.org-v0.1-SHA1-f40e706490f3eb2be56c31ddbf4c8646cd51ef40.html
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (MingW32)
 
-iQEcBAEBAgAGBQJWLSSBAAoJEIdJe5Fjl09ajBMIAJobpBphyjpCmkt8CIzILevd
-YZ4M9wCXq0rDj8oRmHzwHDU/UEqTQtmw0NK4juogBiBdfQ6SKon2woISYw1jg6g7
-EaL3n14dykaXxCvRCo8uTqLr3zsK0w9bxBa0GQ9uh+xG61vM9B14bFkVn90zXLsw
-njn+wyibt4b4NmymKdklU4Ds1jTfquAB/9+dbi7DT5p6hcCGTcvWqekLyVYzVmzO
-fiAmbQyWgGC1GvvRsIhi5vgzhLttXaC/K6s4Ypb74Qd5Uw7DO3qje3pmdZF1V/gQ
-HOsL43jhqFSeGz2SbdJZLQOi1l9GA04cODJsa18tyiZ5ItbXfp9XKL/EcIG1mV4=
-=8hP9
+iQEcBAEBAgAGBQJWLWE7AAoJEIdJe5Fjl09aNdIH/AuVLeRqLu7eQOlZPRU6v1E+
+BNi+bgamlZSyo+IjvCz49QjzB/Yaa0zMtjwfWdlhTaA9UMiw0a0CD2lEMwFumDHw
+oDk2mWgUGnSQEQvMT731z9kLVJRg681JUeLluaWSv4B7IAddGXtV2HlgzvX46WnX
+ipKkPZcUy+QH596oyYeAfL3PX42KDm9MC3Bz3jS0N32nLvbvzDI+4f1PtVUqLJC3
+NjxZ4pbYpxb6/2pSJRGnDL8IxL8pCfCmxwN1rBi5V1+AngsiQc+NWnXfOxm0NLJN
+QZzb8f5FNrbKlQQHkQgcutQK0SlNGrPVc3NZPaLobFUmFpluu/7UNI2bi1Orbxg=
+=Y2pw
 -----END PGP SIGNATURE-----
