@@ -1,8 +1,8 @@
 {
   "name": "bitaddress.org",
-  "version": "3.0.0",
-  "sha1sum": "c3838fd668edd5e51aa262916ac7c286db0ddc51",
-  "sha256sum": "4781574ca09c07f65d1966619f37a762aac6decd8732cacc85b2f2f972f82751",
+  "version": "3.0.1",
+  "sha1sum": "c24a422a1e1d8eb263c633783b6a030b902e5e56",
+  "sha256sum": "24d2d7f047a9aa217bf69f3ef344c972c151b1e3f6a8aa86ceb9a3be62884bc0",
   "description": "Open Source JavaScript Client-Side Bitcoin Wallet Generator",
   "main": "Gruntfile.js",
   "dependencies": {
