@@ -515,7 +515,7 @@
 						<span class="statusicon" id="statusprotocol" onclick="ninja.status.showProtocol();">...</span>
 						<span class="statusicon" id="statuscrypto" onclick="ninja.status.showCrypto();">...</span>
 						<span class="statusicon" id="statusunittests" onclick="ninja.status.showUnitTests();">...</span>
-						<span class="statusicon" id="statuskeypool" onclick="ninja.status.showKeyPool();"></span>
+						<span class="statusicon" id="statuskeypool" onclick="ninja.status.showKeyPool();">&#8803;</span>
 					</span>
 					<span class="item"><span id="footerlabeldonations">Donations:</span> <b>1NiNja</b>1bUmhSoTXozBRBEtR8LeF9TGbZBN</span>
 					<span class="item" id="footerlabeltranslatedby"></span>
